# ARM11_Project

./: .gitignore  CMakeLists.txt
doc/: Checkpoint.tex  Report.tex
programs/: gpio.s
src/: Makefile  assemble.c  assembler_block_data_transfer.c  assembler_block_data_transfer.h  assembler_branch.c  assembler_branch.h  assembler_dataProcessing.c  assembler_data_processing.c  assembler_data_processing.h  assembler_multiply.h  assembler_singleDataTransfer.h  assembler_single_data_transfer.c  assembler_special.h  assembler_utilities.c  assembler_utilities.h  emulate.c  emulator.c  emulator.h  emulator_block_data_transfer.c  emulator_block_data_transfer.h  emulator_branch.c  emulator_branch.h  emulator_data_processing.c  emulator_data_processing.h  emulator_data_transfer.c  emulator_data_transfer.h  emulator_halt.c  emulator_halt.h  emulator_io.c  emulator_memory.c  emulator_memory.h  emulator_multiply.c  emulator_multiply.h  emulator_registers.c  emulator_registers.h  emulator_single_data_transfer.c  emulator_single_data_transfer.h  emulator_utilities.c  emulator_utilities.h
src/assembler/: assembler_blockDataTransfer.c  assembler_blockDataTransfer.h  assembler_branch.c  assembler_dataProcessing.c  assembler_dataProcessing.h  assembler_data_processing.h  assembler_definitions.h  assembler_multiply.c  assembler_multiply.h  assembler_singleDataTransfer.c  assembler_singleDataTransfer.h  assembler_special.c  assembler_utilities.h  twoPassAssembly.c  twoPassAssembly.h
src/emulator/: Makefile  SingleDataTransfer.c  SingleDataTransfer.h  block_data_transfer.c  branch.c  (+48 more)
